tests/baselines/reference/getAndSetNotIdenticalType.errors.txt
==== tests/cases/compiler/getAndSetNotIdenticalType.ts (4 errors) ====
    class C {
        get x(): number {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        ~~~~~~~~~~~~~~~~~
            return 1;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
        set x(v: string) { }
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
    }